kafka/deploy/kafka-cluster/kafka-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
  labels:
    app: kafka-ui
  namespace: kafka-cluster # Movido para o mesmo namespace do Kafka e ZooKeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
      - name: kafka-ui
        image: provectuslabs/kafka-ui:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "1024Mi"
            cpu: "1000m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: kafka-cluster # Movido para o mesmo namespace do Kafka e ZooKeeper
spec:
  selector:
    app: kafka-ui
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
