kafka/deploy/kafka-cluster/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service # Nome do serviço para clientes externos/internos
  namespace: kafka-cluster # Mesma namespace dos seus deployments anteriores
  labels:
    app: kafka
spec:
  type: NodePort # Ou ClusterIP se o acesso for apenas interno ao cluster Kubernetes
  selector:
    app: kafka # Seleciona os pods do StatefulSet do Kafka
  ports:
  - name: external # Porta para clientes externos
    port: 9092
    targetPort: 9092
    nodePort: 30092 # Exemplo de NodePort. Escolha uma porta disponível (>30000)
  - name: client # Porta para clientes internos do cluster (se quiser um ponto de acesso separado)
    port: 29092
    targetPort: 29092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-headless # Nome do serviço headless, usado para descoberta interna dos brokers
  namespace: kafka-cluster # Mesma namespace dos seus deployments anteriores
  labels:
    app: kafka
spec:
  ports:
  - port: 9092
    name: external
  - port: 19092
    name: internal
  - port: 29092
    name: client
  - port: 9999
    name: jmx
  clusterIP: None # Isso o torna um serviço headless
  selector:
    app: kafka # Seleciona os pods do StatefulSet do Kafka
