kafka/deploy/kafka-cluster/zookeeper.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper # Nome do serviço que o Kafka usará (zookeeper:2181)
  namespace: kafka-cluster
  labels:
    app: zookeeper
spec:
  ports:
  - port: 2181
    targetPort: 2181
    name: client
  selector:
    app: zookeeper # Seleciona os pods do StatefulSet do ZooKeeper
  type: ClusterIP # Geralmente ClusterIP, pois o acesso é interno ao cluster
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-headless # Nome do serviço headless
  namespace: kafka-cluster
  labels:
    app: zookeeper
spec:
  ports:
  - port: 2181 # Porta para conexão de clientes
    name: client
  - port: 2888 # Porta para comunicação entre líderes e followers
    name: follower
  - port: 3888 # Porta para eleição do líder
    name: election
  clusterIP: None # Isso o torna um serviço headless
  selector:
    app: zookeeper # Seleciona os pods do StatefulSet do ZooKeeper
