kafka/deploy/kafka-cluster/kafka-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: kafka-ui-cluster-ingress
  namespace: kafka-cluster
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: kafka-ui
            port:
              number: 8080
        path: /
        pathType: Prefix
